--- a/sass/style.scss
+++ b/sass/style.scss
@@ -9,7 +9,97 @@ $font-title: "Shrikhand", cursive;
 $text-desc: #353535;
 $color-primary: #9356dc;
 $color-secondary: #ff79da;
+$color-tertiary: #99e2d0;
 $shadow-card: rgba(0, 0, 0, 0.25) 0px 15px 30px -12px;
+
+.section {
+  position: fixed;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  z-index: 99;
+  top: 0;
+  right: 0;
+  bottom: 0;
+  width: 100%;
+  height: 100%;
+  background: #eaeaeaef;
+  visibility: hidden;
+  transition: visibility 3s;
+  -webkit-transition: visibility 3s;
+  -o-transition: visibility 3s;
+  > .titleloader {
+    font-family: $font-title;
+    font-size: 3em;
+    background: linear-gradient(
+      90deg,
+      $color-primary,
+      $color-secondary,
+      $color-primary
+    );
+    background-size: 400%;
+    -webkit-text-fill-color: transparent;
+    -webkit-background-clip: text;
+    animation: animate 10s linear infinite;
+  }
+  > .loader {
+    position: fixed;
+    width: 300px;
+    height: 300px;
+    display: inline-block;
+    vertical-align: middle;
+    border-radius: 300px;
+  }
+  > .loader:before {
+    content: "";
+    position: absolute;
+    top: -6px;
+    left: -6px;
+    bottom: -6px;
+    right: -6px;
+    border-radius: 500px;
+    border: 6px solid transparent;
+    border-bottom-color: black;
+    animation: spin 2s linear infinite;
+  }
+  > .loader:after {
+    content: "";
+    position: absolute;
+    top: 0px;
+    left: 0px;
+    bottom: 0px;
+    right: 0px;
+    border-radius: 500px;
+    border: 6px solid transparent;
+    border-top-color: $color-primary;
+    animation: spinreverse 1s linear infinite;
+  }
+}
+@keyframes spin {
+  0% {
+    transform: rotate(0deg);
+  }
+  100% {
+    transform: rotate(360deg);
+  }
+}
+@keyframes spinreverse {
+  0% {
+    transform: rotate(0deg);
+  }
+  100% {
+    transform: rotate(-360deg);
+  }
+}
+
+@keyframes animate {
+  0% {
+    background-position: 0%;
+  }
+  100% {
+    background-position: 400%;
+  }
+}
 
 .header {
   display: flex;
@@ -49,6 +139,9 @@ $shadow-card: rgba(0, 0, 0, 0.25) 0px 15px 30px -12px;
       transform: translateY(-2px) translateX(-20px);
       color: #353535;
       text-shadow: 0px 0px 0px #626262;
+      @media screen and (min-width: 702px) {
+        transform: translateX(-12px);
+      }
     }
     @media screen and (min-width: 702px) {
       width: fit-content;
