--- a/style.css
+++ b/style.css
@@ -5,6 +5,89 @@
   scroll-behavior: smooth;
 }
 
+.section {
+  position: fixed;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  z-index: 99;
+  top: 0;
+  right: 0;
+  bottom: 0;
+  width: 100%;
+  height: 100%;
+  background: #eaeaeaef;
+  visibility: hidden;
+  transition: visibility 3s;
+  -webkit-transition: visibility 3s;
+  -o-transition: visibility 3s;
+}
+.section > .titleloader {
+  font-family: "Shrikhand", cursive;
+  font-size: 3em;
+  background: linear-gradient(90deg, #9356dc, #ff79da, #9356dc);
+  background-size: 400%;
+  -webkit-text-fill-color: transparent;
+  -webkit-background-clip: text;
+  animation: animate 10s linear infinite;
+}
+.section > .loader {
+  position: fixed;
+  width: 300px;
+  height: 300px;
+  display: inline-block;
+  vertical-align: middle;
+  border-radius: 300px;
+}
+.section > .loader:before {
+  content: "";
+  position: absolute;
+  top: -6px;
+  left: -6px;
+  bottom: -6px;
+  right: -6px;
+  border-radius: 500px;
+  border: 6px solid transparent;
+  border-bottom-color: black;
+  animation: spin 2s linear infinite;
+}
+.section > .loader:after {
+  content: "";
+  position: absolute;
+  top: 0px;
+  left: 0px;
+  bottom: 0px;
+  right: 0px;
+  border-radius: 500px;
+  border: 6px solid transparent;
+  border-top-color: #9356dc;
+  animation: spinreverse 1s linear infinite;
+}
+
+@keyframes spin {
+  0% {
+    transform: rotate(0deg);
+  }
+  100% {
+    transform: rotate(360deg);
+  }
+}
+@keyframes spinreverse {
+  0% {
+    transform: rotate(0deg);
+  }
+  100% {
+    transform: rotate(-360deg);
+  }
+}
+@keyframes animate {
+  0% {
+    background-position: 0%;
+  }
+  100% {
+    background-position: 400%;
+  }
+}
 .header {
   display: flex;
   justify-content: center;
@@ -46,6 +129,11 @@
   transform: translateY(-2px) translateX(-20px);
   color: #353535;
   text-shadow: 0px 0px 0px #626262;
+}
+@media screen and (min-width: 702px) {
+  .header__location > .iconlocation {
+    transform: translateX(-12px);
+  }
 }
 @media screen and (min-width: 702px) {
   .header__location {
