--- a/sass/style.scss
+++ b/sass/style.scss
@@ -17,18 +17,15 @@ $shadow-card: rgba(0, 0, 0, 0.25) 0px 15px 30px -12px;
   display: flex;
   justify-content: center;
   align-items: center;
-  z-index: 99;
+  z-index: 9999;
   top: 0;
   right: 0;
   bottom: 0;
   width: 100%;
   height: 100%;
   background: #eaeaeaef;
-  visibility: hidden;
-  transition: visibility 3s;
-  -webkit-transition: visibility 3s;
-  -o-transition: visibility 3s;
   > .titleloader {
+    padding: 0.4rem;
     font-family: $font-title;
     font-size: 3em;
     background: linear-gradient(
@@ -40,7 +37,7 @@ $shadow-card: rgba(0, 0, 0, 0.25) 0px 15px 30px -12px;
     background-size: 400%;
     -webkit-text-fill-color: transparent;
     -webkit-background-clip: text;
-    animation: animate 10s linear infinite;
+    animation: animate 6s linear infinite;
   }
   > .loader {
     position: fixed;
@@ -74,6 +71,9 @@ $shadow-card: rgba(0, 0, 0, 0.25) 0px 15px 30px -12px;
     border-top-color: $color-primary;
     animation: spinreverse 1s linear infinite;
   }
+
+  visibility: hidden;
+  -webkit-transition: visibility 3s;
 }
 @keyframes spin {
   0% {
