--- a/style.css
+++ b/style.css
@@ -10,7 +10,7 @@
   display: flex;
   justify-content: center;
   align-items: center;
-  z-index: 99;
+  z-index: 9999;
   top: 0;
   right: 0;
   bottom: 0;
@@ -18,18 +18,17 @@
   height: 100%;
   background: #eaeaeaef;
   visibility: hidden;
-  transition: visibility 3s;
   -webkit-transition: visibility 3s;
-  -o-transition: visibility 3s;
 }
 .section > .titleloader {
+  padding: 0.4rem;
   font-family: "Shrikhand", cursive;
   font-size: 3em;
   background: linear-gradient(90deg, #9356dc, #ff79da, #9356dc);
   background-size: 400%;
   -webkit-text-fill-color: transparent;
   -webkit-background-clip: text;
-  animation: animate 10s linear infinite;
+  animation: animate 6s linear infinite;
 }
 .section > .loader {
   position: fixed;
