--- a/sass/style.scss
+++ b/sass/style.scss
@@ -96,6 +96,7 @@ $shadow-card: rgba(0, 0, 0, 0.25) 0px 15px 30px -12px;
 @keyframes stopspin {
   100% {
     opacity: 0;
+    z-index: -1;
   }
 }
 
