--- a/sass/style.scss
+++ b/sass/style.scss
@@ -3,6 +3,7 @@
   padding: 0;
   font-family: "Roboto", sans-serif;
   scroll-behavior: smooth;
+  z-index: 10;
 }
 
 $font-title: "Shrikhand", cursive;
