--- a/sass/style.scss
+++ b/sass/style.scss
@@ -98,7 +98,7 @@ $shadow-card: rgba(0, 0, 0, 0.25) 0px 15px 30px -12px;
   100% {
     opacity: 0;
     z-index: -1;
-    -webkit-transform: translate3d(0, 0, 0);
+    -webkit-transform: translate3d(0, 0, -300px);
   }
 }
 
