--- a/style.css
+++ b/style.css
@@ -86,7 +86,7 @@
   100% {
     opacity: 0;
     z-index: -1;
-    -webkit-transform: translate3d(0, 0, 0);
+    -webkit-transform: translate3d(0, 0, -300px);
   }
 }
 @keyframes animate {
