--- a/sass/style.scss
+++ b/sass/style.scss
@@ -289,7 +289,9 @@ $shadow-card: rgba(0, 0, 0, 0.25) 0px 15px 30px -12px;
   padding: 3rem 1.5rem;
   > h2 {
     display: flex;
-    justify-content: center;
+    @media screen and (min-width: 900px) {
+      justify-content: center;
+    }
   }
   &__cards {
     &--card > img {
