--- a/style.css
+++ b/style.css
@@ -277,7 +277,11 @@
 }
 .places > h2 {
   display: flex;
-  justify-content: center;
+}
+@media screen and (min-width: 900px) {
+  .places > h2 {
+    justify-content: center;
+  }
 }
 .places__cards--card > img {
   width: 100%;
